--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,56 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello Sayli</title>
+name: Deploy to GitHub Pages
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Poppins", sans-serif;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fbc2eb, #a1c4fd, #c2e9fb);
-            background-size: 400% 400%;
-            animation: gradientMove 10s ease infinite;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+on:
+  push:
+    branches: [ main ]
 
-        @keyframes gradientMove {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
 
-        .box {
-            background: rgba(255, 255, 255, 0.3);
-            padding: 40px;
-            border-radius: 20px;
-            backdrop-filter: blur(8px);
-            box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.2);
-            text-align: center;
-        }
+    steps:
+      - uses: actions/checkout@v3
 
-        h1 {
-            font-size: 45px;
-            color: #ffffff;
-            margin: 0;
-            text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
-        }
+      - name: Upload website files
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: docs
 
-        p {
-            font-size: 22px;
-            color: #fff;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="box">
-        <h1>Hello Sayli!</h1>
-        <p>How are you today? 😊</p>
-    </div>
-</body>
-</html>
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v2
