--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,13 @@ jobs:
       id-token: write
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Upload website files
         uses: actions/upload-pages-artifact@v2
         with:
-          path: docs
+          path: .
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
